--- a/19dec/index.html
+++ b/19dec/index.html
@@ -4,8 +4,44 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script>
+
+    </script>
+    <!-- Embeded CSS -->
+    <style>
+      h1{
+        color:red;
+        font-size: 50px;
+        background-color: aquamarine;
+      }
+
+      #image1{
+        width:100px;
+        height: 100px;
+      }
+
+      .imgclass{
+        width:200px;
+        height: 200px;
+        border-radius: 50px;
+        background-color: brown;
+        padding: 20px;
+        margin: 12px;
+      }
+    </style>
   </head>
   <body>
-    <h1>Git and Gitub Setup.</h1>
+    <!--Inline CSS-->
+    <h1 >Git and Gitub Setup.</h1>
+    <h1 style="color: blue;">ksdjfkjsdflks.</h1>
+    <h1 >gdlfjgup.</h1>
+    
+    <h1 >gdlfjgup.</h1>
+    <img id="image1" src="./img1.jpg" alt="Just normal image"/>
+
+    <img class="imgclass" src="./img1.jpg" alt="Just normal image"/>
+
+    <img class="imgclass" width="300px" height="400px" src="./img1.jpg" alt="Just normal image"/>
+    <div class="imgclass">Hi</div>
   </body>
 </html>
