--- a/19dec/notes.html
+++ b/19dec/notes.html
@@ -25,6 +25,48 @@ Steps to create git , github :
 
 
 	Sucessfully Added This file to Gitub
+---------------------------------------------------
+Evening Session
+
+Topic : Style Sheet
+
+Web Programing
+	- HTML - Just Gives the structure of the page
+			-> WEB Page.
+	- CSS - Styles to Text, Images, Section, Div, Span
+
+		- BOX MODEL======= Tommorow Topic
+		cascading style sheet - Doc formater/Design/Layout.
+		3 Ways we can write css code inn a web page.
+			- Inline CSS
+				Winth Tag
+				Example : <h1 style="color: blue;"></h1>
+			- Embeded CSS
+				Within page	:
+				<style>
+					selector{
+
+					}
+					tag, id, class
+				</style>
+			- External Css
+	- JS
+		interactiveness in the web pages
+	- PHP
+		- for Processing
+	- Database- MySql
+		- Storing Data
+
+
+
+
+
+
+
+
+
+
+
 
 
 
