--- a/19dec/notes.html
+++ b/19dec/notes.html
@@ -34,29 +34,53 @@ Web Programing
 	- HTML - Just Gives the structure of the page
 			-> WEB Page.
 	- CSS - Styles to Text, Images, Section, Div, Span
-
-		- BOX MODEL======= Tommorow Topic
-		cascading style sheet - Doc formater/Design/Layout.
-		3 Ways we can write css code inn a web page.
-			- Inline CSS
-				Winth Tag
-				Example : <h1 style="color: blue;"></h1>
-			- Embeded CSS
-				Within page	:
-				<style>
-					selector{
-
-					}
-					tag, id, class
-				</style>
-			- External Css
 	- JS
-		interactiveness in the web pages
+		- Interactiveness in the web pages
 	- PHP
 		- for Processing
 	- Database- MySql
 		- Storing Data
 
+CSS:
+	- Cascading style sheet - Doc formater/Design/Layout.
+	Topics:
+		- BOX MODEL
+		- Different approaches to style sheets,
+			-3 ways:
+				- Inline
+				- Embeded/Internal
+				- External 
+		- Using Multiple approaches,
+			Yes, we can use all apprpaches
+		- Linking to style information in separate files
+			- External CSS
+		- Setting up style information.
+			- How to define rules
+	
+
+
+
+
+
+
+
+
+
+
+
+3 Ways we can write css code inn a web page.
+	- Inline CSS
+		Winth Tag
+		Example : <h1 style="color: blue;"></h1>
+	- Embeded CSS
+		Within page	:
+		<style>
+			selector{
+
+			}
+			tag, id, class
+		</style>
+	- External Css
 
 
 
