Apply CSS Property Border, Shadow and Gradient

--- a/20dec/notes.html
+++ b/20dec/notes.html
@@ -8,7 +8,7 @@ CSS:
 				- Embeded/Internal
 				- External 
 		- Using Multiple approaches,
-			Yes, we can use all apprpaches
+			Yes, we can use all approaches
 		- Linking to style information in separate files
 			- External CSS
 		- Setting up style information.
