--- a/index.html
+++ b/index.html
@@ -1,29 +1,35 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Main Page</title>
-</head>
-<body>
-	<h2>Menu</h2>
-	<ul>
-		<li>
-			<a href="./5dec/index.html"> 5 Dec</a>
-		</li>
-		<li>
-			<a href="./6dec/index.html"> 6 Dec</a>
-		</li>
-		<li>
-			<a href="./12dec/index.html"> 12 Dec</a>
-		</li>
-		<li>
-			<a href="./5dec/index.html"> 5 Dec</a>
-		</li>
-		<li>
-			<a href="./5dec/index.html"> 5 Dec</a>
-		</li>
-		<li>
-			<a href="./5dec/index.html"> 5 Dec</a>
-		</li>
-	</ul>
-</body>
+  <head>
+    <title>Main Page</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="header">
+      <h2 class="title">Menu</h2>
+      <ul>
+        <li>
+          <a href="./5dec/index.html"> 5 Dec</a>
+        </li>
+        <li>
+          <a href="./6dec/index.html"> 6 Dec</a>
+        </li>
+        <li>
+          <a href="./12dec/index.html"> 12 Dec</a>
+        </li>
+        <li>
+          <a href="./5dec/index.html"> 5 Dec</a>
+        </li>
+        <li>
+          <a href="./5dec/index.html"> 5 Dec</a>
+        </li>
+        <li>
+          <a href="./5dec/index.html"> 5 Dec</a>
+        </li>
+        <li>
+          <a href="./26dec/index.html"> 26 Dec CSS</a>
+        </li>
+      </ul>
+    </div>
+  </body>
 </html>
