Code refactoring CSS

--- a/26dec/index.html
+++ b/26dec/index.html
@@ -8,21 +8,16 @@
   </head>
   <body>
     <h1>Text-shadow effect!</h1>
-    <div>Box Shadow</div>
-    <div>Box Shadow</div>
-    <div>Box Shadow</div>
-    <br />
-    <br />
-    <br />
+    <div class="boxes">
+      <div class="box">Box Shadow</div>
+      <div class="box">Box Shadow</div>
+      <div class="box">Box Shadow</div>
+    </div>
     <br />
     <span>Span</span>
     <span>Span</span>
-
     <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <h3 class="grad">ksdhfhsdkfsdhk</h3>
+    <h3 class="grad">Gradient example 1.</h3>
+    <h3 class="grad1">Gradient example 2.</h3>
   </body>
 </html>
